fix: form layout spacing

--- a/src/components/fridge/fridge.module.css
+++ b/src/components/fridge/fridge.module.css
@@ -4,19 +4,35 @@
 }
 
 .backdrop {
-  position: fixed;
-  inset: 0;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  background: rgba(0, 0, 0, 0.5);
+	position: fixed;
+	inset: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background: rgba(0, 0, 0, 0.5);
 }
 
 .modal {
-  background: white;
-  padding: 2rem;
-  border-radius: 12px;
-  min-width: 400px;
+	background: white;
+	padding: 2rem;
+	border-radius: 12px;
+	min-width: 400px;
+	position:relative;
+}
+
+.modalHeader {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	color: black;
+	margin-bottom: 2rem;
+}
+
+h2{
+	margin: 0 auto;
+	text-align: left;
+}
+
+.closeButton{
+	height: 100%;
 }
